style/markets.css
.stock-container {
    background-color: #1E2732;
    margin: 10px;
    width: calc(33% - 20px);
    height: calc(50vh - 40px);
    border-radius: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-weight: bold;
    font-size: 18px;
}

.market-name {
    margin-top: 5px;
    user-select: none;
    text-align: center;
}

img {
    height: 75px;
    width: 75px;
    border-radius: 100%;
}

.main-container {
    display: flex;
    flex-wrap: wrap;
}

a {
    text-decoration: none;
    font-size: 25px;
    display: block;
    color: gray;
}

a:hover {
    color: white;
}

